--- a/cbuildbot/config_dump.json
+++ b/cbuildbot/config_dump.json
@@ -11755,6 +11755,198 @@
         ],
         "vm_tests": []
     },
+    "kevin-tpm2-chrome-pfq": {
+        "_template": "chrome-pfq",
+        "boards": [
+            "kevin-tpm2"
+        ],
+        "important": false,
+        "manifest": "official.xml",
+        "vm_tests": []
+    },
+    "kevin-tpm2-chromium-pfq": {
+        "_template": "chromium-pfq",
+        "boards": [
+            "kevin-tpm2"
+        ],
+        "description": "Preflight Chromium Uprev & Build (internal)",
+        "doc": "http://www.chromium.org/chromium-os/build/builder-overview#TOC-Chrome-PFQ",
+        "important": false,
+        "internal": true,
+        "manifest_repo_url": "https://chrome-internal-review.googlesource.com/chromeos/manifest-internal",
+        "overlays": "both",
+        "prebuilts": "public",
+        "useflags": [
+            "-chrome_internal"
+        ],
+        "vm_tests": []
+    },
+    "kevin-tpm2-compile-only-pre-cq": {
+        "_template": "compile-only-pre-cq",
+        "boards": [
+            "kevin-tpm2"
+        ],
+        "internal": true,
+        "manifest": "official.xml",
+        "manifest_repo_url": "https://chrome-internal-review.googlesource.com/chromeos/manifest-internal",
+        "overlays": "both",
+        "useflags": [
+            "chrome_internal"
+        ]
+    },
+    "kevin-tpm2-full": {
+        "_template": "full",
+        "boards": [
+            "kevin-tpm2"
+        ],
+        "prebuilts": "public",
+        "useflags": [
+            "-chrome_internal"
+        ],
+        "vm_tests": []
+    },
+    "kevin-tpm2-no-vmtest-pre-cq": {
+        "_template": "no-vmtest-pre-cq",
+        "boards": [
+            "kevin-tpm2"
+        ],
+        "internal": true,
+        "manifest": "official.xml",
+        "manifest_repo_url": "https://chrome-internal-review.googlesource.com/chromeos/manifest-internal",
+        "overlays": "both",
+        "useflags": [
+            "chrome_internal"
+        ]
+    },
+    "kevin-tpm2-paladin": {
+        "_template": "paladin",
+        "boards": [
+            "kevin-tpm2"
+        ],
+        "description": "Commit Queue (internal)",
+        "important": false,
+        "internal": true,
+        "manifest": "official.xml",
+        "manifest_repo_url": "https://chrome-internal-review.googlesource.com/chromeos/manifest-internal",
+        "overlays": "both",
+        "prebuilts": "private",
+        "useflags": [
+            "chrome_internal"
+        ],
+        "vm_tests": [],
+        "vm_tests_override": null
+    },
+    "kevin-tpm2-payloads": {
+        "_template": "payloads",
+        "boards": [
+            "kevin-tpm2"
+        ]
+    },
+    "kevin-tpm2-pre-cq": {
+        "_template": "pre-cq",
+        "boards": [
+            "kevin-tpm2"
+        ],
+        "internal": true,
+        "manifest": "official.xml",
+        "manifest_repo_url": "https://chrome-internal-review.googlesource.com/chromeos/manifest-internal",
+        "overlays": "both",
+        "useflags": [
+            "chrome_internal"
+        ],
+        "vm_tests": []
+    },
+    "kevin-tpm2-release": {
+        "_template": "release",
+        "boards": [
+            "kevin-tpm2"
+        ],
+        "vm_tests": [],
+        "vm_tests_override": null
+    },
+    "kevin-tpm2-release-afdo": {
+        "_template": "release-afdo-generate",
+        "boards": [
+            "kevin-tpm2"
+        ],
+        "child_configs": [
+            {
+                "_template": "release-afdo-generate",
+                "boards": [
+                    "kevin-tpm2"
+                ],
+                "grouped": true,
+                "name": "kevin-tpm2-release-afdo-generate",
+                "vm_tests": [],
+                "vm_tests_override": null
+            },
+            {
+                "_template": "release-afdo-use",
+                "boards": [
+                    "kevin-tpm2"
+                ],
+                "grouped": true,
+                "name": "kevin-tpm2-release-afdo-use",
+                "vm_tests": [],
+                "vm_tests_override": null
+            }
+        ],
+        "vm_tests": [],
+        "vm_tests_override": null
+    },
+    "kevin-tpm2-release-afdo-generate": {
+        "_template": "release-afdo-generate",
+        "boards": [
+            "kevin-tpm2"
+        ],
+        "vm_tests": [],
+        "vm_tests_override": null
+    },
+    "kevin-tpm2-release-afdo-use": {
+        "_template": "release-afdo-use",
+        "boards": [
+            "kevin-tpm2"
+        ],
+        "vm_tests": [],
+        "vm_tests_override": null
+    },
+    "kevin-tpm2-tot-chrome-pfq-informational": {
+        "_template": "chrome-pfq-informational",
+        "boards": [
+            "kevin-tpm2"
+        ],
+        "manifest": "official.xml",
+        "vm_tests": []
+    },
+    "kevin-tpm2-tot-chrome-pfq-informational-gn": {
+        "_template": "chrome-pfq-informational-gn",
+        "boards": [
+            "kevin-tpm2"
+        ],
+        "manifest": "official.xml",
+        "vm_tests": []
+    },
+    "kevin-tpm2-tot-chromium-pfq-informational": {
+        "_template": "chromium-pfq-informational",
+        "boards": [
+            "kevin-tpm2"
+        ],
+        "useflags": [
+            "-chrome_internal"
+        ],
+        "vm_tests": []
+    },
+    "kevin-tpm2-tot-chromium-pfq-informational-gn": {
+        "_template": "chromium-pfq-informational-gn",
+        "boards": [
+            "kevin-tpm2"
+        ],
+        "useflags": [
+            "-chrome_internal",
+            "gn"
+        ],
+        "vm_tests": []
+    },
     "kip-chrome-pfq": {
         "_template": "chrome-pfq",
         "boards": [
