libweston: fix major in libweston.pc
Renames forgotten in "libweston: use new versioning scheme".

Cc: Emil Velikov <emil.velikov@collabora.com>
Cc: Quentin Glidic <sardemff7+git@sardemff7.net>
Signed-off-by: Pekka Paalanen <pekka.paalanen@collabora.co.uk>
Reviewed-by: Quentin Glidic <sardemff7+git@sardemff7.net>

--- a/libweston/libweston.pc.in
+++ b/libweston/libweston.pc.in
@@ -7,5 +7,5 @@ Name: libweston API
 Description: Header files for libweston compositors development
 Version: @WESTON_VERSION@
 Requires.private: wayland-server pixman-1 xkbcommon
-Cflags: -I${includedir}/libweston-@LIBWESTON_ABI_VERSION@
-Libs: -L${libdir} -lweston-@LIBWESTON_ABI_VERSION@
+Cflags: -I${includedir}/libweston-@LIBWESTON_MAJOR@
+Libs: -L${libdir} -lweston-@LIBWESTON_MAJOR@
