webm_parser: Reference more files in CMakeLists.txt.
Some includes were missed in the first pass when webm_parser
was added to CMakeLists.txt. Add the missing includes from
webm_parser/include/webm.

Change-Id: I193debe8018155ff9f0ab1d1326330069333948e

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,16 @@ add_library(mkvparser STATIC
 if (ENABLE_WEBM_PARSER)
 include_directories(webm_parser webm_parser/include)
 add_library(webm_parser STATIC
+            "${LIBWEBM_SRC_DIR}/webm_parser/include/webm/buffer_reader.h"
+            "${LIBWEBM_SRC_DIR}/webm_parser/include/webm/callback.h"
+            "${LIBWEBM_SRC_DIR}/webm_parser/include/webm/dom_types.h"
+            "${LIBWEBM_SRC_DIR}/webm_parser/include/webm/element.h"
+            "${LIBWEBM_SRC_DIR}/webm_parser/include/webm/file_reader.h"
+            "${LIBWEBM_SRC_DIR}/webm_parser/include/webm/id.h"
+            "${LIBWEBM_SRC_DIR}/webm_parser/include/webm/istream_reader.h"
+            "${LIBWEBM_SRC_DIR}/webm_parser/include/webm/reader.h"
+            "${LIBWEBM_SRC_DIR}/webm_parser/include/webm/status.h"
+            "${LIBWEBM_SRC_DIR}/webm_parser/include/webm/webm_parser.h"
             "${LIBWEBM_SRC_DIR}/webm_parser/src/ancestory.cc"
             "${LIBWEBM_SRC_DIR}/webm_parser/src/ancestory.h"
             "${LIBWEBM_SRC_DIR}/webm_parser/src/audio_parser.h"
