--- a/Makefile.am
+++ b/Makefile.am
@@ -161,7 +161,8 @@ TESTS =						\
 	resources-test				\
 	message-test				\
 	headers-test				\
-	compositor-introspection-test
+	compositor-introspection-test		\
+	protocol-logger-test
 
 if ENABLE_CPP_TEST
 TESTS += cpp-compile-test
@@ -220,6 +221,8 @@ message_test_SOURCES = tests/message-test.c
 message_test_LDADD = libtest-runner.la
 compositor_introspection_test_SOURCES = tests/compositor-introspection-test.c
 compositor_introspection_test_LDADD = libtest-runner.la
+protocol_logger_test_SOURCES = tests/protocol-logger-test.c
+protocol_logger_test_LDADD = libtest-runner.la
 headers_test_SOURCES = tests/headers-test.c \
 		       tests/headers-protocol-test.c \
 		       tests/headers-protocol-core-test.c
