Add kevin-firmware to firmware-boards list
BUG=None
TEST=None

Change-Id: I87fb043f604abf3113fd6f2fb2da54bdf57a9b94
Reviewed-on: https://chromium-review.googlesource.com/384174
Reviewed-by: Bernie Thompson <bhthompson@chromium.org>
Commit-Queue: Katie Roberts-Hoffman <katierh@chromium.org>
Tested-by: Katie Roberts-Hoffman <katierh@chromium.org>

--- a/cbuildbot/config_dump.json
+++ b/cbuildbot/config_dump.json
@@ -11936,6 +11936,17 @@
             "chrome_internal"
         ]
     },
+    "kevin-firmware": {
+        "_template": "firmware",
+        "boards": [
+            "kevin"
+        ],
+        "manifest": "official.xml",
+        "useflags": [
+            "chrome_internal",
+            "chromeless_tty"
+        ]
+    },
     "kevin-full": {
         "_template": "full",
         "boards": [
