--- a/tables/Makefile.am
+++ b/tables/Makefile.am
@@ -2,48 +2,47 @@
 # $ ls | grep -v Makefile | grep -v README | grep -v maketablelist.sh | grep -v '.*~$' | sort -df | sed -e 's/$/ \\/' -e 's/^/	/' -e '$s/\\$//'
 table_files = \
 	afr-za-g1.ctb \
-	ar \
 	ar-ar-g1.utb \
 	ar-fa.utb \
-	as \
+	ar.tbl \
 	as-in-g1.utb \
-	awa \
+	as.tbl \
+	awa.tbl \
 	aw-in-g1.utb \
 	be-in-g1.utb \
 	bengali.cti \
-	bg \
 	bg.ctb \
-	bh \
+	bg.tbl \
 	bh.ctb \
-	bn \
-	bo \
+	bh.tbl \
+	bn.tbl \
 	bo.ctb \
+	bo.tbl \
 	boxes.ctb \
-	bra \
 	braille-patterns.cti \
+	bra.tbl \
 	br-in-g1.utb \
-	ca \
 	ca-chardefs.cti \
 	ca-g1.ctb \
+	ca.tbl \
 	chardefs.cti \
 	chr-us-g1.ctb \
-	ckb \
 	ckb-chardefs.cti \
 	ckb-g1.ctb \
+	ckb.tbl \
 	ckb-translation.cti \
 	compress.cti \
 	controlchars.cti \
 	corrections.cti \
 	countries.cti \
-	cs \
 	cs-chardefs.cti \
 	cs-g1.ctb \
+	cs.tbl \
 	cs-translation.cti \
-	cy \
 	cy-cy-g1.utb \
 	cy-cy-g2.ctb \
+	cy.tbl \
 	Cz-Cz-g1.utb \
-	da \
 	da-chardefs6.cti \
 	da-dk-common6.uti \
 	da-dk.dis \
@@ -59,8 +58,7 @@ table_files = \
 	da-dk-nocaps.uti \
 	da-dk-octobraille.dis \
 	da-lt.ctb \
-	de \
-	de_CH \
+	da.tbl \
 	de-ch-accents.cti \
 	de-chardefs6.cti \
 	de-chardefs8.cti \
@@ -68,39 +66,40 @@ table_files = \
 	de-ch-g0.utb \
 	de-ch-g1.ctb \
 	de-ch-g2.ctb \
-	de_DE \
+	de_CH.tbl \
 	de-de-accents.cti \
 	de-de-comp8.ctb \
 	de-de.dis \
 	de-de-g0.utb \
 	de-de-g1.ctb \
 	de-de-g2.ctb \
+	de_DE.tbl \
 	de-eurobrl6.dis \
 	de-eurobrl6u.dis \
 	de-g0-core.uti \
 	de-g1-core.cti \
 	de-g2-core.cti \
+	de.tbl \
 	devanagari.cti \
 	digits6DotsPlusDot6.uti \
 	digits6Dots.uti \
 	digits8Dots.uti \
-	dra \
 	dra.ctb \
-	el \
-	en \
-	en_AS \
-	en_CA \
+	dra.tbl \
+	el.tbl \
+	en_AS.tbl \
 	en_CA.ctb \
+	en_CA.tbl \
 	en-chess.ctb \
-	en_GB \
 	en-gb-comp8.ctb \
 	en-gb-g1.utb \
 	en-GB-g2.ctb \
+	en_GB.tbl \
 	en-in-g1.ctb \
+	en.tbl \
 	en-ueb-chardefs.uti \
 	en-ueb-g1.ctb \
 	en-ueb-g2.ctb \
-	en_US \
 	en-us-brf.dis \
 	en-us-comp6.ctb \
 	en-us-comp8.ctb \
@@ -109,67 +108,67 @@ table_files = \
 	en-us-g2.ctb \
 	en-us-interline.ctb \
 	en-us-mathtext.ctb \
-	eo \
+	en_US.tbl \
 	eo-g1.ctb \
 	eo-g1-x-system.ctb \
-	es \
+	eo.tbl \
 	es-chardefs.cti \
 	Es-Es-G0.utb \
 	Es-Es-g1.utb \
 	es-g1.ctb \
 	es-new.dis \
 	es-old.dis \
+	es.tbl \
 	es-translation.cti \
-	et \
 	et.ctb \
 	et-g0.utb \
 	ethio-g1.ctb \
+	et.tbl \
 	eurodefs.cti \
-	fi \
 	fi1.ctb \
 	fi2.ctb \
 	fi-fi-8dot.ctb \
 	fi-fi.ctb \
+	fi.tbl \
 	fi.utb \
-	fr \
 	fr-2007.ctb \
 	fr-bfu-comp6.utb \
 	fr-bfu-comp8.utb \
 	fr-bfu-g2.ctb \
-	fr_CA \
 	fr-ca-g1.utb \
 	Fr-Ca-g2.ctb \
-	fr_FR \
+	fr_CA.tbl \
 	fr-fr-g1.utb \
 	Fr-Fr-g2.ctb \
-	ga \
+	fr_FR.tbl \
+	fr.tbl \
 	ga-g1.utb \
 	ga-g2.ctb \
-	gd \
+	ga.tbl \
 	gd.ctb \
-	gez \
-	gon \
+	gd.tbl \
+	gez.tbl \
 	gon.ctb \
+	gon.tbl \
 	gr-bb.ctb \
 	gr-gr-g1.utb \
-	gu \
 	gu-in-g1.utb \
 	gujarati.cti \
 	gurumuki.cti \
+	gu.tbl \
 	haw-us-g1.ctb \
-	he \
 	he.ctb \
-	hi \
+	he.tbl \
 	hi-in-g1.utb \
-	hr \
+	hi.tbl \
 	hr.ctb \
-	hu \
+	hr.tbl \
 	hu-backtranslate-correction.dis \
 	hu-chardefs.cti \
 	hu-exceptionwords.cti \
 	hu-hu-comp8.ctb \
 	hu-hu-g1.ctb \
-	hy \
+	hu.tbl \
 	hy.ctb \
 	hyph_brl_da_dk.dic \
 	hyph_cs_CZ.dic \
@@ -188,19 +187,20 @@ table_files = \
 	hyph_pt_PT.dic \
 	hyph_ru.dic \
 	hyph_sv_SE.dic \
-	is \
+	hy.tbl \
 	is-chardefs6.cti \
 	is-chardefs8.cti \
 	is.ctb \
-	it \
+	is.tbl \
 	it-it-comp6.utb \
 	it-it-comp8.utb \
+	it.tbl \
 	iu-ca-g1.ctb \
 	ka-in-g1.utb \
 	kannada.cti \
-	kha \
+	kha.tbl \
 	kh-in-g1.utb \
-	kn \
+	kn.tbl \
 	ko-2006.cti \
 	ko-2006-g1.ctb \
 	ko-2006-g2.ctb \
@@ -210,53 +210,52 @@ table_files = \
 	ko-g1-rules.cti \
 	ko-g2.ctb \
 	ko-g2-rules.cti \
-	kok \
 	kok.ctb \
-	kru \
+	kok.tbl \
 	kru.ctb \
+	kru.tbl \
 	ks-in-g1.utb \
 	latinLetterDef6Dots.uti \
 	latinLetterDef8Dots.uti \
 	litdigits6Dots.uti \
 	loweredDigits6Dots.uti \
 	loweredDigits8Dots.uti \
-	lt \
 	lt.ctb \
-	lv \
+	lt.tbl \
 	Lv-Lv-g1.utb \
+	lv.tbl \
 	malayalam.cti \
 	mao-nz-g1.ctb \
 	marburg.ctb \
 	marburg_edit.ctb \
 	marburg_single_cell_defs.cti \
 	marburg_unicode_defs.cti \
-	ml \
 	ml-in-g1.utb \
-	mni \
+	ml.tbl \
 	mn-in-g1.utb \
+	mni.tbl \
 	mn-MN.utb \
-	mr \
 	mr-in-g1.utb \
-	mt \
+	mr.tbl \
 	mt.ctb \
-	mun \
+	mt.tbl \
 	mun.ctb \
-	mwr \
+	mun.tbl \
 	mwr.ctb \
-	ne \
+	mwr.tbl \
 	ne.ctb \
 	nemeth.ctb \
 	nemethdefs.cti \
 	nemeth_edit.ctb \
-	nl \
-	nl_BE \
+	ne.tbl \
 	nl-BE.dis \
 	nl-BE-g0.utb \
+	nl_BE.tbl \
 	nl-chardefs.uti \
 	nl-g0.utb \
-	nl_NL \
 	nl-NL-g0.utb \
-	no \
+	nl_NL.tbl \
+	nl.tbl \
 	no-no-8dot-fallback-6dot-g0.utb \
 	no-no-8dot.utb \
 	no-no-chardefs6.uti \
@@ -269,25 +268,25 @@ table_files = \
 	no-no-generic.ctb \
 	no-no-generic.dis \
 	no-no-latinLetterDef6Dots_diacritics.uti \
+	no.tbl \
 	np-in-g1.utb \
-	or \
 	or-in-g1.utb \
 	oriya.cti \
-	pa \
-	pi \
+	or.tbl \
+	pa.tbl \
 	pi.ctb \
-	pl \
+	pi.tbl \
 	pl-pl-comp8.ctb \
 	Pl-Pl-g1.utb \
+	pl.tbl \
 	printables.cti \
-	pt \
 	pt-pt-comp8.ctb \
 	pt-pt-g1.utb \
 	pt-pt-g2.ctb \
+	pt.tbl \
 	pu-in-g1.utb \
-	ro \
 	ro.ctb \
-	ru \
+	ro.tbl \
 	ru-chardefs.cti \
 	ru-compbrl.ctb \
 	ru.ctb \
@@ -295,40 +294,41 @@ table_files = \
 	ru-litbrl.ctb \
 	ru-ru.dis \
 	ru-ru-g1.utb \
-	sa \
+	ru.tbl \
 	sa-in-g1.utb \
-	sd \
+	sa.tbl \
+	sd.tbl \
 	se-se.ctb \
 	se-se.dis \
 	Se-Se-g1.utb \
 	si-in-g1.utb \
-	sk \
 	sk-chardefs.cti \
 	sk-g1.ctb \
 	sk-sk-g1.utb \
 	sk-sk.utb \
+	sk.tbl \
 	sk-translation.cti \
-	sl \
 	sl-si-comp8.ctb \
 	sl-si-g1.utb \
+	sl.tbl \
 	sot-za-g1.ctb \
 	spaces.ctb \
-	sr \
 	sr-chardefs.cti \
 	sr-g1.ctb \
-	sv \
+	sr.tbl \
 	sv-1989.ctb \
 	sv-1996.ctb \
-	ta \
+	sv.tbl \
 	ta.ctb \
 	tamil.cti \
 	ta-ta-g1.ctb \
-	te \
+	ta.tbl \
 	te-in-g1.utb \
 	telugu.cti \
+	te.tbl \
 	text_nabcc.dis \
-	tr \
 	tr.ctb \
+	tr.tbl \
 	tsn-za-g1.ctb \
 	UEBC-g1.utb \
 	UEBC-g2.ctb \
@@ -341,16 +341,16 @@ table_files = \
 	unicode.dis \
 	uni-text.dis \
 	us-table.dis \
-	vi \
 	vi.ctb \
 	vi-g1.ctb \
+	vi.tbl \
 	wiskunde-chardefs.cti \
 	wiskunde.ctb \
 	wiskunde-translation.cti \
-	zh_HK \
 	zh-hk.ctb \
-	zh_TW \
-	zh-tw.ctb 
+	zh_HK.tbl \
+	zh-tw.ctb \
+	zh_TW.tbl 
 
 tablesdir = $(datadir)/liblouis/tables
 tables_DATA = $(table_files)
