Makefile: do not put TESTS into check_PROGRAMS
If you assign TESTS into check_PROGRAMS, you cannot add a test that is
not built from source files.

Instead, use a temporary variable built_test_programs to hold the names
that are both programs built from source files and tests to execute.

This change is required by the following patch adding wayland-scanner
test script.

Signed-off-by: Pekka Paalanen <pekka.paalanen@collabora.co.uk>
Reviewed-by: Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>
Reviewed-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/Makefile.am
+++ b/Makefile.am
@@ -144,7 +144,7 @@ libwayland_cursor_la_CFLAGS =			\
 	-DICONDIR=\"$(ICONDIR)\"
 
 
-TESTS =						\
+built_test_programs =				\
 	array-test				\
 	client-test				\
 	display-test				\
@@ -165,11 +165,13 @@ TESTS =						\
 	protocol-logger-test
 
 if ENABLE_CPP_TEST
-TESTS += cpp-compile-test
+built_test_programs += cpp-compile-test
 endif
 
+TESTS = $(built_test_programs)
+
 check_PROGRAMS =				\
-	$(TESTS)				\
+	$(built_test_programs)			\
 	exec-fd-leak-checker
 
 noinst_PROGRAMS =				\
