gyp: Add support for all big endian platform
Update config to use icudtb.dat if the byteorder is big
endian, this will work for other big endian platforms
such as PPC and s390.
Original CL for BE support: https://codereview.chromium.org/2162393003

R=jshin@chromium.org
BUG=v8:5567

Review URL: https://codereview.chromium.org/2434153002 .

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -997,6 +997,7 @@ if (is_android) {
 } else {
   data_dir = "common"
 }
+# TODO(GYP): Support to use host byteorder to select the icu date file
 if (current_cpu == "mips" || current_cpu == "mips64") {
   data_bundle_prefix = "icudtb"
 } else {
