--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ lib*.a
 /src/tools/linux/symupload/minidump_upload
 /src/tools/linux/symupload/sym_upload
 /src/tools/mac/dump_syms/dump_syms
+/src/tools/mac/dump_syms/dump_syms_mac
 
 # Ignore autotools generated artifacts.
 .deps
