Return to suppressing deprecation warnings
The previous change re-enabled warnings too aggressively. While the icu
target built correctly the icu nacl targets (such as
irt_x64/obj/third_party/icu/icuuc/uidna.o on Windows and
newlib_pnacl/obj/third_party/icu/icuuc/uidna.o on other platforms)
failed to compile due to deprecation warnings. This change adds back
suppression of that one warning.

BUG=21515
R=thakis@chromium.org

Review URL: https://codereview.chromium.org/2504463002 .

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -82,6 +82,8 @@ config("icu_code") {
   }
   if (is_clang) {
     cflags += [
+      # ICU uses its own deprecated functions.
+      "-Wno-deprecated-declarations",
       # ICU has some code with the pattern:
       #   if (found = uprv_getWindowsTimeZoneInfo(...))
       "-Wno-parentheses",
