Makefile: build also test programs during a normal build
Put also test programs into noinst_PROGRAMS so that they get always
built. In check_PROGRAMS they are built for 'make check' but not for
'make'.

This makes it harder to accidentally break the test programs.

v2: also change check_LTLIBRARIES to noinst_LTLIBRARIES

Signed-off-by: Pekka Paalanen <pekka.paalanen@collabora.co.uk>
Reviewed-by: Daniel Stone <daniels@collabora.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -170,14 +170,12 @@ endif
 
 TESTS = $(built_test_programs)
 
-check_PROGRAMS =				\
-	$(built_test_programs)			\
-	exec-fd-leak-checker
-
 noinst_PROGRAMS =				\
+	$(built_test_programs)			\
+	exec-fd-leak-checker			\
 	fixed-benchmark
 
-check_LTLIBRARIES = libtest-runner.la
+noinst_LTLIBRARIES += libtest-runner.la
 
 libtest_runner_la_SOURCES =			\
 	tests/test-runner.c			\
