MD Settings: create a shared handler/browser proxy to control extensions
Will be used by extension controlled indicator in an upcoming CL.

R=tommycli@chromium.org
BUG=614265

Review URL: https://codereview.chromium.org/2509543002 .

Cr-Commit-Position: refs/heads/master@{#432742}

Former-commit-id: 0a36353a53249a1820b6ae8c2ebb1e81e51ac30d

--- a/chrome/browser/ui/BUILD.gn
+++ b/chrome/browser/ui/BUILD.gn
@@ -1094,6 +1094,8 @@ split_static_library("ui") {
       "webui/settings/chromeos/internet_handler.h",
       "webui/settings/downloads_handler.cc",
       "webui/settings/downloads_handler.h",
+      "webui/settings/extension_control_handler.cc",
+      "webui/settings/extension_control_handler.h",
       "webui/settings/font_handler.cc",
       "webui/settings/font_handler.h",
       "webui/settings/languages_handler.cc",
