Implement extension controlled indicators, starting with New Tab page
R=dpapad@chromium.org
BUG=614265

CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation
NOTRY=true  # fixed a merge, see patchset 3

Review URL: https://codereview.chromium.org/2507003005 .

Cr-Commit-Position: refs/heads/master@{#432764}

Former-commit-id: 9d3df9aeeedfdc4e57e3450f3cc6168037766609

--- a/chrome/browser/ui/BUILD.gn
+++ b/chrome/browser/ui/BUILD.gn
@@ -1106,6 +1106,8 @@ split_static_library("ui") {
       "webui/settings/md_settings_ui.h",
       "webui/settings/metrics_reporting_handler.cc",
       "webui/settings/metrics_reporting_handler.h",
+      "webui/settings/on_startup_handler.cc",
+      "webui/settings/on_startup_handler.h",
       "webui/settings/people_handler.cc",
       "webui/settings/people_handler.h",
       "webui/settings/profile_info_handler.cc",
