Support multiple patgen levels
because it appears to be impossible to do it in a single level when we
reach a certain number of words, even when setting BAD_WEIGHT to a
higher number.

--- a/table-dev/Makefile.am
+++ b/table-dev/Makefile.am
@@ -24,14 +24,16 @@ CONTRACTIONS_TABLE = contractions.ctb
 DICTIONARY         = dictionary.sqlite
 WORKING_FILE       = working_file.txt
 
-LEFT_HYPHEN_MIN    = 1
-RIGHT_HYPHEN_MIN   = 1
-HYPH_LEVEL         = 1
-PAT_START          = 1
-PAT_FINISH         = 15
-GOOD_WEIGHT        = 1
-BAD_WEIGHT         = 100
-THRESHOLD          = 1
+HYPH_LEVELS       =  1    2    3
+LEFT_HYPHEN_MIN   =  1    1    1
+RIGHT_HYPHEN_MIN  =  1    1    1
+PAT_START         =  1    1    1
+PAT_FINISH        =  15   15   15
+GOOD_WEIGHT       =  1    1    1
+BAD_WEIGHT        =  100  100  100
+THRESHOLD         =  1    1    1
+
+MAX_HYPH_LEVEL = $(word $(words $(HYPH_LEVELS)),$(HYPH_LEVELS))
 
 .PHONY : patterns
 patterns : $(PATTERNS_TABLE)
@@ -57,48 +59,76 @@ $(CONTRACTIONS_TABLE) : $(WORKING_FILE)
 $(DICTIONARY) : $(WORKING_FILE)
 	bash submit_rows.sh $< $@ $(BASE_TABLE)
 
-$(PATTERNS_TABLE) : patterns.$(HYPH_LEVEL).dic check-patterns
+$(PATTERNS_TABLE) : patterns.$(MAX_HYPH_LEVEL).dic check-patterns
 	cp $< $@
 
 # dictionary file must not contain bad (.) or missed (-) hyphens"
 .PHONY : check-patterns
-check-patterns : dictionary.$(HYPH_LEVEL)
+check-patterns : dictionary.$(MAX_HYPH_LEVEL)
 	if cat $< | grep '\.[^0]\|-' >/dev/null; then false; else true; fi
-
-$(patsubst %,patterns.%.dic,1 2 3 4 5 6 7 8 9) : %.dic : %
-	perl substrings.pl $< tmp
-	@echo "UTF-8\n\
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n\
-% auto-generated file, don't edit! %\n\
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%" | cat - tmp >$@
-	@rm tmp
 
 -include make-patterns.mk
 make-patterns.mk : Makefile
-	rm -f $@
-	@for level in $(HYPH_LEVEL); do \
-		echo "patterns.$$(($$level-1)) :" && \
+	@while true; do \
+		echo "patterns.0 :" && \
 		echo "	touch \$$@" && \
 		echo "" && \
-		echo "dictionary.$$(($$level-1)) : \$$(DICTIONARY)" && \
+		echo "patterns.0.dic :" && \
+		echo "	echo \"UTF-8\" >\$$@" && \
+		echo "" && \
+		echo "dictionary.0 : \$$(DICTIONARY)" && \
 		echo "	bash wrap_python.sh export_chunked_words.py -d \$$< >\$$@" && \
 		echo "" && \
-		echo "patterns.$$level : dictionary.$$(($$level-1)) patterns.$$(($$level-1)) alphabet" && \
-		echo "	bash wrap_patgen.sh \$$< \$$(word 2,\$$^) \$$@ \$$(word 3,\$$^) \\" && \
-		echo "		\$$(LEFT_HYPHEN_MIN) \$$(RIGHT_HYPHEN_MIN) $$level \$$(PAT_START) \$$(PAT_FINISH) \$$(GOOD_WEIGHT) \$$(BAD_WEIGHT) \$$(THRESHOLD)" && \
-		echo "" && \
-		echo "dictionary.$$level : \$$(DICTIONARY) patterns.$$level.dic pattmp.$$level" && \
-		echo "	bash wrap_python.sh export_chunked_words.py -d \$$< -t \$$(BASE_TABLE),\$$(word 2,\$$^) >\$$@" && \
-		echo "	# dictionary file that we produced must be identical to the one that patgen produced" && \
-		echo "	diff \$$@ \$$(word 3,\$$^) >/dev/null" && \
-		echo "" && \
+		prev_level=0 && \
+		for level in $(HYPH_LEVELS); do \
+			echo "patterns.$$level : dictionary.$$prev_level patterns.$$prev_level alphabet" && \
+			echo "	if cat $$< | grep '\.[^0]\|-' >/dev/null; then \\" && \
+			echo "		bash wrap_patgen.sh \$$< \$$(word 2,\$$^) \$$@ \$$(word 3,\$$^) \\" && \
+			echo "			\$$(word $$level,\$$(LEFT_HYPHEN_MIN)) \\" && \
+			echo "			\$$(word $$level,\$$(RIGHT_HYPHEN_MIN)) \\" && \
+			echo "			$$level \\" && \
+			echo "			\$$(word $$level,\$$(PAT_START)) \\" && \
+			echo "			\$$(word $$level,\$$(PAT_FINISH)) \\" && \
+			echo "			\$$(word $$level,\$$(GOOD_WEIGHT)) \\" && \
+			echo "			\$$(word $$level,\$$(BAD_WEIGHT)) \\" && \
+			echo "			\$$(word $$level,\$$(THRESHOLD)) \\" && \
+			echo "			>patgen.log && \\" && \
+			echo "		rm patgen.log; \\" && \
+			echo "	else \\" && \
+			echo "		cp \$$(word 2,\$$^) \$$@ && \\" && \
+			echo "		rm -f pattmp.$$level; \\" && \
+			echo "	fi" && \
+			echo "" && \
+			echo "dictionary.$$level : \$$(DICTIONARY) patterns.$$level.dic" && \
+			echo "	if [ -e pattmp.$$level ]; then \\" && \
+			echo "		bash wrap_python.sh export_chunked_words.py -d \$$< -t \$$(BASE_TABLE),\$$(word 2,\$$^) >\$$@ && \\" && \
+			echo "		diff \$$@ pattmp.$$level >/dev/null; \\" && \
+			echo "	else \\" && \
+			echo "		cp dictionary.$$prev_level \$$@; \\" && \
+			echo "	fi" && \
+			echo "" && \
+			echo "patterns.$$level.dic : %.dic : % patterns.$$prev_level.dic" && \
+			echo "	if [ -e pattmp.$$level ]; then \\" && \
+			echo "		perl substrings.pl \$$< tmp >substrings.log && \\" && \
+			echo "		rm substrings.log && \\" && \
+			echo "		echo \"UTF-8\\\n\\" && \
+			echo "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\\\n\\" && \
+			echo "% auto-generated file, don't edit! %\\\n\\" && \
+			echo "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\" | cat - tmp >\$$@; \\" && \
+			echo "	else \\" && \
+			echo "		cp \$$(word 2,\$$^) \$$@; \\" && \
+			echo "	fi" && \
+			echo "" && \
+			prev_level=$$level; \
+		done && \
 		echo ".PHONY : clean-patterns" && \
 		echo "clean-patterns :" && \
-		echo "	rm -f patterns.$$level patterns.$$(($$level-1))" && \
-		echo "	rm -f dictionary.$$level dictionary.$$(($$level-1))" && \
-		echo "	rm -f pattmp.$$level" && \
-		echo "	" && \
-		echo ""; \
+		echo "	rm -f patterns.0 $(patsubst %,patterns.%,$(HYPH_LEVELS))" && \
+		echo "	rm -f patterns.0.dic $(patsubst %,patterns.%.dic,$(HYPH_LEVELS))" && \
+		echo "	rm -f dictionary.0 $(patsubst %,dictionary.%,$(HYPH_LEVELS))" && \
+		echo "	rm -f $(patsubst %,pattmp.%,$(HYPH_LEVELS))" && \
+		echo "" && \
+		break; \
 	done >$@
 
 alphabet : $(DICTIONARY)
@@ -108,4 +138,4 @@ clean : clean-table-dev
 
 .PHONY : clean-table-dev
 clean-table-dev : clean-patterns
-	rm -f patterns.$(HYPH_LEVEL).dic alphabet $(WORKING_FILE) make-patterns.mk
+	rm -f alphabet $(WORKING_FILE) make-patterns.mk substrings.log patgen.log
