Fix backtranslation for contractions followed by punctuation

--- a/tests/yaml/en-ueb-g1_backward.yaml
+++ b/tests/yaml/en-ueb-g1_backward.yaml
@@ -16,3 +16,9 @@ tests:
   - [⠠⠁, A]
   - [⠠⠠, ""]
   - [⠠⠠⠁⠁, AA]
+  # Backtranslations followed by punctuation
+  - [⠁⠂, "a,"]
+  - [⠃⠂, "b,"]
+  - [⠉⠂, "c,"]
+  - [⠙⠂, "d,"]
+
