--- a/tests/yaml/en-ueb-g2_backward.yaml
+++ b/tests/yaml/en-ueb-g2_backward.yaml
@@ -35,3 +35,13 @@ tests:
   - [⠼⠁⠰⠠⠁, 1A]
   # #309: Ensure correct back-translation to "this".
   - [⠹, this]
+
+  # Contractions followed by punctuation
+  # 1-letter contractions
+  - [⠃⠂, "but,"]
+  - [⠉⠂, "can,"]
+  - [⠙⠂, "do,"]
+  # multi-letter contractions
+  - [⠁⠃⠂, "about,"]
+  - [⠁⠃⠧⠂, "above,"]
+
