Remove alex, mario, and zgb paladins
BUG=chromium:725993
TEST=None
CQ-DEPEND=CL:514282

Change-Id: I3741378dae37116e432c65d3c7375f5f96e206c3
Reviewed-on: https://chromium-review.googlesource.com/514244
Commit-Queue: Bernie Thompson <bhthompson@chromium.org>
Tested-by: Bernie Thompson <bhthompson@chromium.org>
Reviewed-by: Bernie Thompson <bhthompson@chromium.org>

--- a/cbuildbot/config_dump.json
+++ b/cbuildbot/config_dump.json
@@ -14973,11 +14973,8 @@
             "wolf-paladin",
             "wolf-tot-paladin",
             "wooten-paladin",
-            "x86-alex-paladin",
             "x86-generic-paladin",
-            "x86-mario-nowithdebug-paladin",
-            "x86-mario-paladin",
-            "x86-zgb-paladin"
+            "x86-mario-nowithdebug-paladin"
         ],
         "trybot_list": false,
         "useflags": [
@@ -28432,7 +28429,6 @@
     },
     "x86-alex-paladin": {
         "_template": "paladin",
-        "active_waterfall": "chromeos",
         "boards": [
             "x86-alex"
         ],
@@ -28943,7 +28939,6 @@
     },
     "x86-mario-paladin": {
         "_template": "paladin",
-        "active_waterfall": "chromeos",
         "boards": [
             "x86-mario"
         ],
@@ -29118,7 +29113,6 @@
     },
     "x86-zgb-paladin": {
         "_template": "paladin",
-        "active_waterfall": "chromeos",
         "boards": [
             "x86-zgb"
         ],
