Add tests for Early Forms of English

--- a/tests/yaml/en-ueb-symbols_harness.yaml
+++ b/tests/yaml/en-ueb-symbols_harness.yaml
@@ -284,5 +284,16 @@ tests:
   - [≠, ⠐⠶⠈⠱] # not equal [\x2260]
   - [¡, ⠘⠰⠖] # inverted exclamation mark [\x00a1]
   - [¿, ⠘⠰⠦] # inverted question mark [\x00bf]
-  - [—, ⠠⠤] # dash [\x2014]
+  - [–, ⠠⠤] # en dash [\x2013]
+  - [—, ⠠⠤] # em dash [\x2014]
+  - [‘, ⠠⠦] # left single quotation mark [\x2018]
+  - [’, ⠠⠴] # right single quotation mark [\x2019]
+  - [Ȝȝ, ⠠⠼⠽⠼⠽] # yogh [\x021c\x021d]
+  - [Þþ, ⠠⠼⠮⠼⠮] # thorn [\x00de\x00fe]
+  - [Ðð, ⠠⠼⠫⠼⠫] # eth [\x00d0\x00f0]
+  - [Ƿƿ, ⠠⠼⠺⠼⠺] # wynn (wen) [\x01f7\x01bf]
+  - [Æ, ⠠⠁⠠⠘⠖⠑] # capital ligature ae (ash) [\x00c6]
+  - [æ, ⠁⠘⠖⠑] # lowercase ligature ae (ash) [\x00e6]
+  - [Œ, ⠠⠕⠠⠘⠖⠑] # capital ligature oe [\x0152]
+  - [œ, ⠕⠘⠖⠑] # lowercase ligature oe [\x0153]
 
