--- a/tests/yaml/en-ueb-symbols_harness.yaml
+++ b/tests/yaml/en-ueb-symbols_harness.yaml
@@ -210,8 +210,8 @@ tests:
   - [∥, ⠼⠇] # parallel to [\x2225]
   - [∧, ⠈⠦] # and (inverted v shape) [\x2227]
   - [∨, ⠈⠖] # or (upright v shape) [\x2228]
-  - [∩, ⠴⠨⠦] # intersection (inverted U shape) [\x2229]
-  - [∪, ⠴⠨⠖] # union (upright U shape) [\x222a]
+  - [∩, ⠨⠦] # intersection (inverted U shape) [\x2229]
+  - [∪, ⠨⠖] # union (upright U shape) [\x222a]
   - [∫, ⠮] # integral sign [\x222b]
   - [∮, ⠈⠮] # closed line integral (small circle halfway up) [\x222e]
   - [∴, ⠠⠡] # 'therefore' (three dots in upright pyramid) [\x2234] 
@@ -249,8 +249,8 @@ tests:
   - [║, ⠠⠸] # second variant vertical line segment [\x2551]
   - [╱, ⠜] # right-leaning single solid diagonal line segment [\x2571]
   - [╲, ⠣] # left-leaning single solid diagonal line segment [\x2572]
-  - [■, ⠸⠫] # filled (solid) shape indicator [\x25a0]
-  - [▧, ⠨⠫] # shaded shape indicator [\x25a7]
+  - [■, ⠸⠫⠼⠙] # filled (solid) shape indicator applied on square [\x25a0]
+  - [▧, ⠨⠫⠼⠙] # shaded shape indicator applied on square [\x25a7]
   - [♀, ⠘⠭] # female sign (Venus) [\x2640]
   - [♂, ⠘⠽] # male sign (Mars) [\x2642]
   - [♭, ⠼⠣] # flat [\x266d]
@@ -260,10 +260,11 @@ tests:
   - [B♮, ⠠⠃⠼⠡]
   - [F♯, ⠠⠋⠼⠩]
   - [⦵, ⠨⠚] # 'normal' (superscript circle crossed by horizontal line) [\x29b5] 
-  - [⫤, ⠨⠸⠒] # reverse 'is valid' sign [\x2ae4] 
-  - [˦, ⠘⠨⠉] # high tone [\x2e6]
-  - [˧, ⠘⠨⠒] # mid tone [\x2e7]
-  - [˨, ⠘⠨⠤] # low tone [\x2e8]
+  - [⊣, ⠈⠸⠒] # reverse assertion sign ('T' lying on right side) [\x22a3]
+  - [⫤, ⠨⠸⠒] # reverse 'is valid' sign [\x2ae4]
+  - [˦, ⠘⠨⠉] # high tone [\x02e6]
+  - [˧, ⠘⠨⠒] # mid tone [\x02e7]
+  - [˨, ⠘⠨⠤] # low tone [\x02e8]
   - [〃, ⠐⠂] # ditto mark [\x3003]
   - [●, ⠐⠔] # black circle [\x25cf]
   - [⅐, ⠼⠁⠌⠛] # vulgar fraction one seventh (1/7) [\x2150]
