Update symbols which should not support back-translation

--- a/tests/yaml/en-ueb-02-stand_alone.yaml
+++ b/tests/yaml/en-ueb-02-stand_alone.yaml
@@ -32,11 +32,11 @@ tests:
 - - th--r
   - th--;r
 - - Mme. M—
-  - ',mme4 ;,m,-'
+  - ',mme4 ;,m",-'
 - - –s
   - ',-;s'
 - - —st
-  - ',-st'
+  - '",-st'
 
 # 2.6.2 page 16
 
