Add shape symbols for triangles and circles

--- a/tests/yaml/en-ueb-symbols_harness.yaml
+++ b/tests/yaml/en-ueb-symbols_harness.yaml
@@ -173,8 +173,9 @@ tests:
   - [χ, ⠨⠯] # lowercase Greek chi [\x03c7]
   - [ψ, ⠨⠽] # lowercase Greek psi [\x03c8]
   - [ω, ⠨⠺] # lowercase Greek omega [\x03c9]
-  - [—, ⠠⠤] # dash [\x2014]
-  - [―, ⠐⠠⠤] # long dash [\x2015]
+  - [–, ⠠⠤] # dash [\x2013]
+  - [—, ⠐⠠⠤] # long dash [\x2014]
+  - [―, ⠐⠠⠤] # horizontal bar [\x2015]
   - [‘, ⠠⠦] # opening single quotation mark [\x2018]
   - [’, ⠴] # closing one-cell (nonspecific) quotation mark [\x2019]
   - [’, ⠠⠴] # closing single quotation mark [\x2019]
@@ -250,7 +251,13 @@ tests:
   - [╱, ⠜] # right-leaning single solid diagonal line segment [\x2571]
   - [╲, ⠣] # left-leaning single solid diagonal line segment [\x2572]
   - [■, ⠸⠫⠼⠙] # filled (solid) shape indicator applied on square [\x25a0]
+  - [□, ⠫⠼⠙] # square [\x25a1]
   - [▧, ⠨⠫⠼⠙] # shaded shape indicator applied on square [\x25a7]
+  - [▲, ⠸⠫⠼⠉] # filled (solid) (equilateral) triangle [\x25b2]
+  - [△, ⠫⠼⠉] # regular (equilateral) triangle [\x25b3]
+  - [○, ⠫⠿] # circle [\x25cb]
+  - [◍, ⠨⠫⠿] # shaded circle [\x25cd]
+  - [⦵, ⠨⠚] # 'normal' (superscript circle crossed by horizontal line) [\x29b5]
   - [♀, ⠘⠭] # female sign (Venus) [\x2640]
   - [♂, ⠘⠽] # male sign (Mars) [\x2642]
   - [♭, ⠼⠣] # flat [\x266d]
