Revert "Fix backtranslation for contractions followed by punctuation"
This reverts commit 257369901ad9824793db46af584ef139815115f8.

Without deleting the failing tests. They are simply marked as xfail.

--- a/tests/yaml/en-ueb-g2_backward.yaml
+++ b/tests/yaml/en-ueb-g2_backward.yaml
@@ -38,10 +38,10 @@ tests:
 
   # Contractions followed by punctuation
   # 1-letter contractions
-  - [⠃⠂, "but,"]
-  - [⠉⠂, "can,"]
-  - [⠙⠂, "do,"]
+  - [⠃⠂, "but,", {xfail: true}]
+  - [⠉⠂, "can,", {xfail: true}]
+  - [⠙⠂, "do,", {xfail: true}]
   # multi-letter contractions
-  - [⠁⠃⠂, "about,"]
-  - [⠁⠃⠧⠂, "above,"]
+  - [⠁⠃⠂, "about,", {xfail: true}]
+  - [⠁⠃⠧⠂, "above,", {xfail: true}]
 
