--- a/tests/yaml/Makefile.am
+++ b/tests/yaml/Makefile.am
@@ -10,15 +10,15 @@ EXTRA_DIST =					\
 	da-dk-g18.yaml				\
 	da-dk-g26-dictionary_harness.yaml	\
 	da-dk-g28-dictionary_harness.yaml	\
-	da-dk-g28l.yaml				\
 	da-dk-g28.yaml				\
+	da-dk-g28l.yaml				\
 	el-backward.yaml			\
 	el-forward.yaml				\
 	emphasis-full.yaml			\
 	emphasis-no-context.yaml		\
-	en-gb-g1_harness.yaml			\
 	en-GB-g2_backward.yaml			\
 	en-GB-g2_harness.yaml			\
+	en-gb-g1_harness.yaml			\
 	en-ueb-02-stand_alone.yaml		\
 	en-ueb-03-symbols.yaml			\
 	en-ueb-05-grade_1_mode.yaml		\
@@ -29,9 +29,9 @@ EXTRA_DIST =					\
 	en-ueb-10-13-contractions.yaml		\
 	en-ueb-g1_backward.yaml			\
 	en-ueb-g1_harness.yaml			\
-	en-ueb-g2_backward.yaml			\
-	en-ueb-g2_backward_no_dis.yaml	\
 	en-ueb-g2-dictionary_harness.yaml	\
+	en-ueb-g2_backward.yaml			\
+	en-ueb-g2_backward_no_dis.yaml		\
 	en-ueb-math.yaml			\
 	en-ueb-symbols_harness.yaml		\
 	en-us-comp8-ext-back_harness.yaml	\
@@ -53,9 +53,11 @@ EXTRA_DIST =					\
 	hr-8dots_harness.yaml			\
 	hu-hu-comp8_backward.yaml		\
 	hu-hu-comp8_harness.yaml		\
+	hu-hu-g1-hyph_harness.yaml		\
 	hu-hu-g1_backward.yaml			\
 	hu-hu-g1_harness.yaml			\
-	hu-hu-g1-hyph_harness.yaml		\
+	issue-238.yaml				\
+	issue-35.yaml				\
 	iu-ca-g1_harness.yaml			\
 	ko-2006-g2_harness.yaml			\
 	ko-g2_harness.yaml			\
@@ -66,19 +68,18 @@ EXTRA_DIST =					\
 	multipass-forward.yaml			\
 	multipass.yaml				\
 	new_emph.yaml				\
-	nl-g0_harness.yaml			\
 	nl-NL-g0_harness.yaml			\
+	nl-g0_harness.yaml			\
 	no_8dot_harness.yaml			\
-	nocross_harness.yaml			\
 	no_g1_harness.yaml			\
 	no_g2_harness.yaml			\
 	no_harness.yaml				\
+	nocross_harness.yaml			\
 	noletsignafter.yaml			\
 	pl-pl-comp8_harness.yaml		\
 	sr-g1_harness.yaml			\
+	syllable.yaml				\
 	ta-ta-g1_harness.yaml			\
 	vi-g1_backward.yaml			\
 	vi-g1_harness.yaml			\
-	zh-chn.yaml					\
-	issue-35.yaml				\
-	issue-238.yaml
+	zh-chn.yaml
