Enable the en-ueb-symbols tests
Most of them pass now, just set the remaining ones to xfail.

--- a/tests/yaml/en-ueb-symbols_harness.yaml
+++ b/tests/yaml/en-ueb-symbols_harness.yaml
@@ -177,11 +177,11 @@ tests:
   - [—, ⠐⠠⠤] # long dash [\x2014]
   - [―, ⠐⠠⠤] # horizontal bar [\x2015]
   - [‘, ⠠⠦] # opening single quotation mark [\x2018]
-  - [’, ⠴] # closing one-cell (nonspecific) quotation mark [\x2019]
+  - [’, ⠴, {xfail: true}] # closing one-cell (nonspecific) quotation mark [\x2019]
   - [’, ⠠⠴] # closing single quotation mark [\x2019]
-  - [“, ⠘⠦] # opening double quotation mark [\x201c]
+  - [“, ⠘⠦, {xfail: true}] # opening double quotation mark [\x201c]
   - [”, ⠴] # closing one-cell (nonspecific) quotation mark [\x201d]
-  - [”, ⠘⠴] # closing double quotation mark [\x201d]
+  - [”, ⠘⠴, {xfail: true}] # closing double quotation mark [\x201d]
   - [†, ⠈⠠⠹] # dagger [\x2020]
   - [‡, ⠈⠠⠻] # double dagger [\x2021]
   - [•, ⠸⠲] # bullet [\x2022]
