--- a/tests/yaml/Makefile.am
+++ b/tests/yaml/Makefile.am
@@ -7,6 +7,7 @@ EXTRA_DIST =					\
 	da-dk-g08.yaml				\
 	da-dk-g16.yaml	\
 	da-dk-g16-dictionary_harness.yaml	\
+	da-dk-g16-lit.yaml	\
 	da-dk-g18-dictionary_harness.yaml	\
 	da-dk-g18.yaml				\
 	da-dk-g26-dictionary_harness.yaml	\
