--- a/tests/yaml/syllable.yaml
+++ b/tests/yaml/syllable.yaml
@@ -25,17 +25,27 @@ tests:
     - ⠁⠃⠓⠪⠗⠂⠡⠞⠛ ⠁⠃⠓⠪⠗⠂⠡⠞⠛ ⠁⠃⠓⠪⠗⠂⠡⠞⠛ ⠁⠃⠓⠪⠗⠂⠡⠞⠛
     - {xfail: true}
 
+  - # the fifth translation is wrong again
+    - abhörauftrag abhörauftrag abhörauftrag abhörauftrag abhörauftrag
+    - ⠁⠃⠓⠪⠗⠂⠡⠞⠛ ⠁⠃⠓⠪⠗⠂⠡⠞⠛ ⠁⠃⠓⠪⠗⠂⠡⠞⠛ ⠁⠃⠓⠪⠗⠂⠡⠞⠛ ⠁⠃⠓⠪⠗⠂⠡⠞⠛
+    - {xfail: true}
+
+  - # ... and the sixth is correct
+    - abhörauftrag abhörauftrag abhörauftrag abhörauftrag abhörauftrag abhörauftrag
+    - ⠁⠃⠓⠪⠗⠂⠡⠞⠛ ⠁⠃⠓⠪⠗⠂⠡⠞⠛ ⠁⠃⠓⠪⠗⠂⠡⠞⠛ ⠁⠃⠓⠪⠗⠂⠡⠞⠛ ⠁⠃⠓⠪⠗⠂⠡⠞⠛ ⠁⠃⠓⠪⠗⠂⠡⠞⠛
+    - {xfail: true}
+
 # Now let's see if the bug is also exposed when using no umlauts. No.
 # Apparently this bug is only triggered for umlauts
   -
-    - kaufauftrag
-    - ⠅⠡⠋⠂⠡⠞⠛
+    - lehrauftrag
+    - ⠇⠶⠗⠂⠡⠞⠛
   -
-    - kaufauftrag kaufauftrag
-    - ⠅⠡⠋⠂⠡⠞⠛ ⠅⠡⠋⠂⠡⠞⠛
+    - lehrauftrag lehrauftrag
+    - ⠇⠶⠗⠂⠡⠞⠛ ⠇⠶⠗⠂⠡⠞⠛
   -
-    - kaufauftrag kaufauftrag kaufauftrag
-    - ⠅⠡⠋⠂⠡⠞⠛ ⠅⠡⠋⠂⠡⠞⠛ ⠅⠡⠋⠂⠡⠞⠛
+    - lehrauftrag lehrauftrag lehrauftrag
+    - ⠇⠶⠗⠂⠡⠞⠛ ⠇⠶⠗⠂⠡⠞⠛ ⠇⠶⠗⠂⠡⠞⠛
   -
-    - kaufauftrag kaufauftrag kaufauftrag kaufauftrag
-    - ⠅⠡⠋⠂⠡⠞⠛ ⠅⠡⠋⠂⠡⠞⠛ ⠅⠡⠋⠂⠡⠞⠛ ⠅⠡⠋⠂⠡⠞⠛
+    - lehrauftrag lehrauftrag lehrauftrag lehrauftrag
+    - ⠇⠶⠗⠂⠡⠞⠛ ⠇⠶⠗⠂⠡⠞⠛ ⠇⠶⠗⠂⠡⠞⠛ ⠇⠶⠗⠂⠡⠞⠛
